# biosample-enricher

./: .env.example  .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  CODING_STANDARDS.md  Makefile  README.md  TESTING.md  geocoding_demo_results.json  main.py  mypy.ini  pyproject.toml  test_failure_analysis.md
.github/hooks/: auto-fix-ci.sh  protect-precious-files.sh
.github/workflows/: ci.yml  metrics-pages.yml  metrics-pr.yml  release.yml
biosample_enricher/: __init__.py  adapters.py  biosample_elevation_mapper.py  cache_management.py  cli.py  cli_biosample_elevation.py  cli_elevation.py  cli_land.py  cli_marine.py  cli_metrics.py  cli_soil.py  cli_weather.py  config.py  core.py  elevation_demos.py  geocoding_comprehensive_demo.py  gold_adapter_demo.py  host_detector.py  http_cache.py  id_retrieval_demo.py  logging_config.py  models.py  mongodb_connection_demo.py  nmdc_adapter_demo.py  providers.py  pydantic_validation_demo.py  random_sampling_demo.py  reverse_geocoding_models.py  schema_inference.py  schema_statistics.py  synthetic_validation_demo.py  unified_adapter_demo.py  weather_demo.py
biosample_enricher/elevation/: __init__.py  classifier.py  location_detector.py  service.py  utils.py
biosample_enricher/elevation/providers/: __init__.py  base.py  google.py  open_topo_data.py  osm.py  usgs.py
biosample_enricher/land/: __init__.py  models.py  service.py
biosample_enricher/land/providers/: __init__.py  base.py  esa_worldcover.py  modis_vegetation.py  nlcd.py
biosample_enricher/marine/: __init__.py  models.py  service.py
biosample_enricher/marine/providers/: __init__.py  base.py  esa_cci.py  gebco.py  noaa_oisst.py
biosample_enricher/metrics/: __init__.py  aligner.py  dashboard.py  evaluator.py  fetcher.py  markdown.py  reporter.py  visualizer.py
biosample_enricher/reverse_geocoding/: __init__.py  service.py
biosample_enricher/reverse_geocoding/providers/: __init__.py  base.py  google.py  osm.py
biosample_enricher/soil/: __init__.py  models.py  service.py
biosample_enricher/soil/providers/: __init__.py  base.py  soilgrids.py  usda_nrcs.py
biosample_enricher/weather/: __init__.py  metrics.py  models.py  service.py
biosample_enricher/weather/providers/: __init__.py  base.py  meteostat.py  open_meteo.py
cache/: .gitkeep
config/: .gitkeep  README.md  databases.yaml  defaults.yaml  field_mappings.yaml  host_detection.yaml  providers.yaml  validation.yaml
data/input/: synthetic_biosamples.json
data/outputs/adapters/: gold_adapter_test.json  id_retrieval_test.json  mongodb_adapter_test.json  nmdc_adapter_test.json  pydantic_validation_test.json  random_sampling_test.json  synthetic_validation_test.json  unified_adapter_test.json
data/outputs/biosample_elevation/: enriched_biosamples.json
data/outputs/elevation/: mount_rushmore.json
data/outputs/metrics/: metrics_by_region.csv  metrics_samples.csv  metrics_summary.csv
data/outputs/schema/: enrichment_analysis.json  enrichment_analysis_raw.json  gold_biosample_schema.json  gold_biosample_stats.csv  gold_biosample_stats.md  nmdc_biosample_schema.json  nmdc_biosample_stats.csv  nmdc_biosample_stats.md  schema_comparison.json  schema_comparison_raw.json
docs/: CODING_STANDARDS.md  LOGGING.md  PERFORMANCE_NOTES.md  TESTING.md  elevation_api_keys.md  elevation_providers.md  flaky-tests.md
local/: .gitkeep
logs/: .gitkeep
prompts/: enrichment-analysis-prompt.txt  schema-comparison-prompt.txt
scripts/: generate_metrics_dashboard.py  generate_metrics_markdown.py  pytest_bisect.py  test_individual.py
stubs/: genson.pyi
tests/: README.md  __init__.py  conftest.py  test_adapters.py  test_biosample_elevation_mapper.py  test_cache_management.py  test_cli.py  test_cli_main.py  test_core.py  test_demo_scripts.py  test_elevation.py  test_elevation_cli.py  test_google_apis.py  test_http_cache.py  test_http_cache_regression.py  test_logging.py  test_marine_enrichment.py  test_models.py  test_reverse_geocoding.py  test_schema_tools.py  test_soil_enrichment.py  test_weather_enrichment.py
tests/examples/: __init__.py  test_sunrise_api_demo.py
